# ImageRetrieval

./: .gitignore  CMakeLists.txt  COMPARISON_ANALYSIS.md  CUSTOM_FEATURE_REPORT.md  EXTENSIONS.md  README.md  REPORT.md  RESULTS.md  readme.txt
src/: baseline_match.cpp  custom_sunset_match.cpp  deep_embedding_match.cpp  histogram_match.cpp  live_dnn_match.cpp  multi_histogram_match.cpp  texture_color_match.cpp
